namespaces/whereami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      serviceAccountName: default
      containers:
      - name: whereami
        image: us-east4-docker.pkg.dev/mabenoit-demo/containers/hello-world
        ports:
          - name: http
            containerPort: 8080
