namespaces/whereami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: whereami
  type: LoadBalancer
