namespaces/whereami/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whereami
spec:
  backend:
    serviceName: whereami
    servicePort: 80
